--- a/style.css
+++ b/style.css
@@ -1,15 +1,26 @@
+:root {
+    /* Default global value */
+    --bulma-size-medium: 1.25rem;
+    color:white;
+  }
+  
+
+
 .navbar {
 width: 100%;
 height: 30px;
 background-color: green;
 color: white;
 border: yellow;
+font-size: large;
+font-weight: bold;
+text-align: center;
 }
 
 
 
 
-.wiki {
+.panel {
     width: 340px;
     height: 700px;
     background-color: yellowgreen;
@@ -20,24 +31,27 @@ border: yellow;
 
 .genre  {
 
-    width: 900px;
+    width: 1100px;
     height: 80px;    background-color: darkgreen;
     color: white;
     border: yellow;
     float:right
-
+    
 }
 
-.button {
-    width: 200px;
-    height: 80px;
-    background-color: rgb(73, 210, 73);
+.button{
+
+    width: 1100px;
+    height: 80px;    background-color: darkgreen;
     color: white;
     border: yellow;
     float:right
+    
 
 
 }
+
+
 
 
 
